<?xml version="1.0" encoding="UTF-8"?>
<ui version="4.0">
 <class>Dialog</class>
 <widget class="QDialog" name="Dialog">
  <property name="geometry">
   <rect>
    <x>0</x>
    <y>0</y>
    <width>811</width>
    <height>487</height>
   </rect>
  </property>
  <property name="windowTitle">
   <string>Your Current Context</string>
  </property>
  <layout class="QHBoxLayout" name="horizontalLayout">
   <item>
    <widget class="QTabWidget" name="context_overview_tab_widget">
     <property name="tabPosition">
      <enum>QTabWidget::South</enum>
     </property>
     <property name="currentIndex">
      <number>0</number>
     </property>
     <widget class="QWidget" name="tab">
      <attribute name="icon">
       <iconset resource="resources.qrc">
        <normaloff>:/res/icon_task.png</normaloff>:/res/icon_task.png</iconset>
      </attribute>
      <attribute name="title">
       <string>Current Context</string>
      </attribute>
      <layout class="QVBoxLayout" name="verticalLayout_4">
       <item>
        <widget class="ContextBrowserWidget" name="context_browser" native="true">
         <property name="sizePolicy">
          <sizepolicy hsizetype="Expanding" vsizetype="Expanding">
           <horstretch>0</horstretch>
           <verstretch>0</verstretch>
          </sizepolicy>
         </property>
         <property name="minimumSize">
          <size>
           <width>380</width>
           <height>0</height>
          </size>
         </property>
        </widget>
       </item>
      </layout>
     </widget>
     <widget class="QWidget" name="tab_2">
      <attribute name="icon">
       <iconset resource="resources.qrc">
        <normaloff>:/res/logo_color_16.png</normaloff>:/res/logo_color_16.png</iconset>
      </attribute>
      <attribute name="title">
       <string>Active Apps</string>
      </attribute>
      <layout class="QVBoxLayout" name="verticalLayout_2">
       <item>
        <widget class="QLabel" name="label_2">
         <property name="text">
          <string>You can double click on an app to jump to its documentation.</string>
         </property>
        </widget>
       </item>
       <item>
        <widget class="AppBrowserWidget" name="app_browser" native="true">
         <property name="sizePolicy">
          <sizepolicy hsizetype="Expanding" vsizetype="Expanding">
           <horstretch>0</horstretch>
           <verstretch>0</verstretch>
          </sizepolicy>
         </property>
         <property name="minimumSize">
          <size>
           <width>380</width>
           <height>0</height>
          </size>
         </property>
        </widget>
       </item>
      </layout>
     </widget>
     <widget class="QWidget" name="tab_3">
      <attribute name="icon">
       <iconset resource="resources.qrc">
        <normaloff>:/res/cog_white.png</normaloff>:/res/cog_white.png</iconset>
      </attribute>
      <attribute name="title">
       <string>Environment</string>
      </attribute>
      <layout class="QVBoxLayout" name="verticalLayout_3">
       <item>
        <widget class="QLabel" name="label_3">
         <property name="text">
          <string>The environment file contains all the settings and configuration for the currently running Tank Apps. The Tank Engine provides core services such as menu management and app startup.</string>
         </property>
         <property name="wordWrap">
          <bool>true</bool>
         </property>
        </widget>
       </item>
       <item>
        <widget class="EnvironmentBrowserWidget" name="environment_browser" native="true">
         <property name="sizePolicy">
          <sizepolicy hsizetype="Expanding" vsizetype="Expanding">
           <horstretch>0</horstretch>
           <verstretch>0</verstretch>
          </sizepolicy>
         </property>
         <property name="minimumSize">
          <size>
           <width>380</width>
           <height>0</height>
          </size>
         </property>
        </widget>
       </item>
      </layout>
     </widget>
    </widget>
   </item>
   <item>
    <layout class="QVBoxLayout" name="verticalLayout">
     <property name="spacing">
      <number>5</number>
     </property>
     <item>
      <widget class="QLabel" name="label">
       <property name="text">
        <string/>
       </property>
       <property name="pixmap">
        <pixmap resource="resources.qrc">:/res/tank_logo.png</pixmap>
       </property>
      </widget>
     </item>
     <item>
      <widget class="QPushButton" name="jump_to_fs">
       <property name="text">
        <string>Jump to the File System</string>
       </property>
      </widget>
     </item>
     <item>
      <widget class="QPushButton" name="platform_docs">
       <property name="text">
        <string>Platform Documentation</string>
       </property>
      </widget>
     </item>
     <item>
      <widget class="QPushButton" name="support">
       <property name="text">
        <string>Help Desk and Support</string>
       </property>
      </widget>
     </item>
     <item>
      <spacer name="verticalSpacer">
       <property name="orientation">
        <enum>Qt::Vertical</enum>
       </property>
       <property name="sizeHint" stdset="0">
        <size>
         <width>20</width>
         <height>40</height>
        </size>
       </property>
      </spacer>
     </item>
     <item>
      <widget class="QPushButton" name="close">
       <property name="text">
        <string>Close</string>
       </property>
      </widget>
     </item>
    </layout>
   </item>
  </layout>
 </widget>
 <customwidgets>
  <customwidget>
   <class>ContextBrowserWidget</class>
   <extends>QWidget</extends>
   <header>..context_browser</header>
   <container>1</container>
  </customwidget>
  <customwidget>
   <class>AppBrowserWidget</class>
   <extends>QWidget</extends>
   <header>..app_browser</header>
   <container>1</container>
  </customwidget>
  <customwidget>
   <class>EnvironmentBrowserWidget</class>
   <extends>QWidget</extends>
   <header>..environment_browser</header>
   <container>1</container>
  </customwidget>
 </customwidgets>
 <resources>
  <include location="resources.qrc"/>
 </resources>
 <connections>
  <connection>
   <sender>close</sender>
   <signal>clicked()</signal>
   <receiver>Dialog</receiver>
   <slot>accept()</slot>
   <hints>
    <hint type="sourcelabel">
     <x>513</x>
     <y>291</y>
    </hint>
    <hint type="destinationlabel">
     <x>601</x>
     <y>250</y>
    </hint>
   </hints>
  </connection>
 </connections>
</ui>
